--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,179 @@
-/* .antenna1{
-    /* width: 270px;
-    height: 120px; */
-    background-color: blue;
-} */
+*{
+    padding: 0px;
+    margin: 0px;
+    box-sizing: border-box;
+}
+.body{
+    position: relative;
+width: 1600px;
+height: 3018px;
+}
+a{
+    color: black;
+    text-decoration: none;
+}
+a:hover{
+    color: blue;
+}
+li{
+    list-style-type:none;
+}
+.header{
+    position: absolute;
+    width: 1600px;
+    height: 81px;
+    left: 0px;
+    top: 0px;
+    
+    background: #FFFFFF;
+}
+.header-logo{
+    position: absolute;
+width: 153px;
+height: 31px;
+left: 215px;
+top: 24px;
+
+font-family: Raleway;
+font-style: normal;
+font-weight: bold;
+font-size: 26px;
+line-height: 31px;
+/* identical to box height */
+
+letter-spacing: 0.03em;
+
+color: #2196F3;
+}
+.logo-studio{
+    position: absolute;
+left: 65px;
+color: #000000;  
+}
+.studio{
+    position: absolute;
+width: 49px;
+height: 16px;
+left: 453px;
+top: 32px;
+font-family: Roboto;
+font-style: normal;
+font-weight: 500;
+font-size: 14px;
+line-height: 16px;
+letter-spacing: 0.02em;
+
+color: #212121;
+}
+.portfolio{
+    position: absolute;
+width: 77px;
+height: 16px;
+left: 552px;
+top: 32px;
+font-family: Roboto;
+font-style: normal;
+font-weight: 500;
+font-size: 14px;
+line-height: 16px;
+letter-spacing: 0.02em;
+
+color: #212121;
+}
+.contact{
+    position: absolute;
+width: 68px;
+height: 16px;
+left: 679px;
+top: 32px;
+
+font-family: Roboto;
+font-style: normal;
+font-weight: 500;
+font-size: 14px;
+line-height: 16px;
+letter-spacing: 0.02em;
+
+color: #212121;
+}
+
+.nav-email{
+    position: absolute;
+width: 161px;
+height: 16px;
+left: 1052px;
+top: 32px;
+}
+.nav-tel{
+    position: absolute;
+width: 142px;
+height: 17px;
+left: 1243px;
+top: 32px;
+}
+
+.header-backgroup{
+    position: absolute;
+width: 1600px;
+height: 600px;
+left: 0px;
+top: 80px;
+background: url(/images/header-img.jpg);
+}
+.overlay{
+    position: absolute;
+width: 1600px;
+height: 600px;
+left: 0px;
+background: rgba(47, 48, 58, 0.8);
+}
+.content-text{
+    position: absolute;
+    width: 646px;
+    height: 104px;
+    left: 477px;
+    top: 200px;
+    
+    font-family: Roboto;
+    font-style: normal;
+    font-weight: 900;
+    font-size: 44px;
+    line-height: 136%;
+        
+    text-align: center;
+    letter-spacing: 0.04em;
+    text-transform: uppercase;
+    
+    color: #FFFFFF;
+}
+.content-button{
+    position: absolute;
+width: 200px;
+height: 50px;
+left: 700px;
+top: 350px;
+
+background: #2196F3;
+box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+border-radius: 4px;
+}
+.content-button-text{
+    position: absolute;  
+width: 136px;
+height: 30px;
+left: 732px;
+top: 360px;
+
+font-family: Roboto;
+font-style: normal;
+font-weight: bold;
+font-size: 16px;
+line-height: 187%;
+
+display: flex;
+align-items: center;
+text-align: center;
+letter-spacing: 0.06em;
+
+color: #FFFFFF;
+}
