--- a/css/style.css
+++ b/css/style.css
@@ -118,7 +118,7 @@ width: 1600px;
 height: 600px;
 left: 0px;
 top: 80px;
-background: url(/images/header-img.jpg);
+background: url(./images/header-img.jpg);
 }
 .overlay{
     position: absolute;
