--- a/css/style.css
+++ b/css/style.css
@@ -156,13 +156,6 @@ top: 350px;
 background: #2196F3;
 box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
 border-radius: 4px;
-}
-.content-button-text{
-    position: absolute;  
-width: 136px;
-height: 30px;
-left: 732px;
-top: 360px;
 
 font-family: Roboto;
 font-style: normal;
@@ -176,4 +169,8 @@ text-align: center;
 letter-spacing: 0.06em;
 
 color: #FFFFFF;
+}
+
+.content-button-text{
+    padding-left: 35px;
 }
