--- a/css/style.css
+++ b/css/style.css
@@ -4,9 +4,7 @@
     box-sizing: border-box;
 }
 .body{
-    position: relative;
-    width: 1600px;
-    height: 3018px;
+    height: 100%;       
 }
 a{
     color: black;
@@ -20,7 +18,7 @@ li{
 }
 .header{
     position: absolute;
-    width: 1600px;
+    width: 100%;
     height: 81px;
     left: 0px;
     top: 0px;    
@@ -105,7 +103,7 @@ li{
 
 .header-backgroup{
     position: absolute;
-    width: 1600px;
+    width: 100%;
     height: 600px;
     left: 0px;
     top: 80px;
@@ -113,7 +111,7 @@ li{
 }
 .overlay{
     position: absolute;
-    width: 1600px;
+    width: 100%;
     height: 600px;
     left: 0px;
     background: rgba(47, 48, 58, 0.8);
