--- a/css/style.css
+++ b/css/style.css
@@ -4,14 +4,12 @@
     box-sizing: border-box;
 }
 .body{
+    position: static;
     height: 100%;       
 }
 a{
     color: black;
     text-decoration: none;
-}
-a:hover{
-    color: blue;
 }
 li{
     list-style-type:none;
@@ -92,7 +90,7 @@ li{
     height: 16px;
     left: 1052px;
     top: 32px;
-}
+}    
 .nav-tel{
     position: absolute;
     width: 142px;
@@ -100,7 +98,6 @@ li{
     left: 1243px;
     top: 32px;
 }
-
 .header-backgroup{
     position: absolute;
     width: 100%;
@@ -129,8 +126,7 @@ li{
     line-height: 136%;      
     text-align: center;
     letter-spacing: 0.04em;
-    text-transform: uppercase;
-    
+    text-transform: uppercase;    
     color: #FFFFFF;
 }
 .content-button{
@@ -153,7 +149,205 @@ li{
     letter-spacing: 0.06em;
     color: #FFFFFF;
 }
-
 .content-button-text{
     padding-left: 35px;
+}
+.features{
+    position: absolute;
+    width: 100%;
+    height: 251px;
+    left: 9%;
+    top: 774px;
+    display: flex;
+}
+/* antena */
+.antena{
+    position: relative;
+    width: 270px;
+    height: 251px;
+    left: 0px;
+    top: 0px;
+    width: 270px;
+    height: 120px;
+    left: 0px;
+    background: #F5F4FA;
+    border-radius: 4px;
+}
+.antena:hover{    
+    background: #2196F3;
+    border-radius: 4px;    
+}
+.detal{
+    position: relative;
+    width: 270px;
+    height: 16px;
+    left: 0px;
+    top: 30px;
+    font-family: Roboto;
+    font-style: normal;
+    font-weight: bold;
+    font-size: 14px;
+    line-height: 16px;
+    letter-spacing: 0.03em;
+    text-transform: uppercase;
+    color: #212121;
+}
+.detal-p{
+    position: relative;
+    width: 270px;
+    height: 75px;
+    left: 0px;
+    top: 40px;    
+    font-family: Roboto;
+    font-style: normal;
+    font-weight: normal;
+    font-size: 14px;
+    line-height: 24px;
+    /* or 171% */    
+    letter-spacing: 0.03em;    
+    color: #757575;
+}
+/* clock */
+.clock{
+    position: relative;
+    width: 270px;
+    height: 251px;
+    left: 30px;
+    top: 0px;
+    width: 270px;
+    height: 120px;
+    left: 30px;
+    background: #F5F4FA;
+    border-radius: 4px;
+}
+.clock:hover{    
+    background: #2196F3;
+    border-radius: 4px;
+}
+.punctuality{
+    position: relative;
+    width: 270px;
+    height: 16px;
+    left: 0px;
+    top: 30px;
+    font-family: Roboto;
+    font-style: normal;
+    font-weight: bold;
+    font-size: 14px;
+    line-height: 16px;
+    letter-spacing: 0.03em;
+    text-transform: uppercase;
+    color: #212121;
+}
+.punctuality-p{
+    position: relative;
+    width: 270px;
+    height: 75px;
+    left: 0px;
+    top: 40px;    
+    font-family: Roboto;
+    font-style: normal;
+    font-weight: normal;
+    font-size: 14px;
+    line-height: 24px;
+    /* or 171% */    
+    letter-spacing: 0.03em;    
+    color: #757575;
+}
+.diagram{
+    position: relative;
+    width: 270px;
+    height: 251px;
+    left: 60px;
+    top: 0px;
+    width: 270px;
+    height: 120px;
+    left: 60px;
+    background: #F5F4FA;
+    border-radius: 4px;
+}
+.diagram:hover{   
+    background: #2196F3;
+    border-radius: 4px;
+}
+.plan{
+    position: relative;
+    width: 270px;
+    height: 16px;
+    left: 60px;
+    top: 30px;
+    font-family: Roboto;
+    font-style: normal;
+    font-weight: bold;
+    font-size: 14px;
+    line-height: 16px;
+    letter-spacing: 0.03em;
+    text-transform: uppercase;
+    color: #212121;
+}
+.plan-p{
+    position: relative;
+    width: 270px;
+    height: 75px;
+    left: 60px;
+    top: 40px;    
+    font-family: Roboto;
+    font-style: normal;
+    font-weight: normal;
+    font-size: 14px;
+    line-height: 24px;
+    /* or 171% */    
+    letter-spacing: 0.03em;    
+    color: #757575; 
+}
+.astro{
+    position: relative;
+    width: 270px;
+    height: 251px;
+    left: 90px;
+    top: 0px;
+    width: 270px;
+    height: 120px;
+    left: 90px;
+    background: #F5F4FA;
+    border-radius: 4px;
+}
+.astro:hover{    
+    background: #2196F3;
+    border-radius: 4px;
+}
+.tehno{
+    position: relative;
+    width: 270px;
+    height: 16px;
+    left: 90px;
+    top: 30px;
+    font-family: Roboto;
+    font-style: normal;
+    font-weight: bold;
+    font-size: 14px;
+    line-height: 16px;
+    letter-spacing: 0.03em;
+    text-transform: uppercase;
+    color: #212121;
+}
+.tehno-p{
+    position: relative;
+    width: 270px;
+    height: 75px;
+    left: 90px;
+    top: 40px;    
+    font-family: Roboto;
+    font-style: normal;
+    font-weight: normal;
+    font-size: 14px;
+    line-height: 24px;
+    /* or 171% */    
+    letter-spacing: 0.03em;    
+    color: #757575;
+}
+.center-feater{
+    display:flex;
+    justify-content: center; 
+    padding-top: 25px;   
 }
