--- a/css/style.css
+++ b/css/style.css
@@ -14,14 +14,14 @@ a{
 li{
     list-style-type:none;
 }
-.header{
+/* .header{
     position: absolute;
     width: 100%;
     height: 81px;
     left: 0px;
     top: 0px;    
     background: #FFFFFF;
-}
+} */
 .header-logo{
     position: absolute;
     width: 153px;
@@ -41,12 +41,7 @@ li{
     left: 65px;
     color: #000000;  
 }
-.studio{
-    position: absolute;
-    width: 49px;
-    height: 16px;
-    left: 453px;
-    top: 32px;
+.nav-menu{
     font-family: Roboto;
     font-style: normal;
     font-weight: 500;
@@ -54,6 +49,14 @@ li{
     line-height: 16px;
     letter-spacing: 0.02em;
     color: #212121;
+}
+.studio{
+    position: absolute;
+    width: 49px;
+    height: 16px;
+    left: 453px;
+    top: 32px;
+    
 }
 .portfolio{
     position: absolute;
@@ -61,13 +64,7 @@ li{
     height: 16px;
     left: 552px;
     top: 32px;
-    font-family: Roboto;
-    font-style: normal;
-    font-weight: 500;
-    font-size: 14px;
-    line-height: 16px;
-    letter-spacing: 0.02em;
-    color: #212121;
+    
 }
 .contact{
     position: absolute;
@@ -75,13 +72,7 @@ li{
     height: 16px;
     left: 679px;
     top: 32px;
-    font-family: Roboto;
-    font-style: normal;
-    font-weight: 500;
-    font-size: 14px;
-    line-height: 16px;
-    letter-spacing: 0.02em;
-    color: #212121;
+    
 }
 
 .nav-email{
@@ -160,20 +151,20 @@ li{
     top: 774px;
     display: flex;
 }
-/* antena */
+
 .antena{
     position: relative;
     width: 270px;
     height: 251px;
     left: 0px;
-    top: 0px;
+    top: 0px;    
     width: 270px;
     height: 120px;
     left: 0px;
     background: #F5F4FA;
     border-radius: 4px;
 }
-.antena:hover{    
+.antena:hover{       
     background: #2196F3;
     border-radius: 4px;    
 }
