--- a/css/style.css
+++ b/css/style.css
@@ -241,12 +241,14 @@ li {
 
 .antena {
   position: absolute;
+  left: 0px;
   width: 270px;
   height: 251px;
 }
 
 .antena-li {
   position: absolute;
+  left: 0px;
   width: 270px;
   height: 120px;
   background: #f5f4fa;
@@ -277,6 +279,7 @@ li {
 
 .detal-p {
   position: absolute;
+  left: 0px;
   width: 270px;
   height: 75px;
   top: 176px;
