--- a/css/style.css
+++ b/css/style.css
@@ -560,3 +560,217 @@ li {
   background: rgba(47, 48, 58, 0.8);
   border-radius: 0px 0px 4px 4px;
 }
+.comand {
+  position: relative;
+  width: 1600px;
+  height: 702px;
+  left: 0px;
+  top: 524px;
+}
+.comand > h2 {
+  position: absolute;
+  width: 265px;
+  height: 42px;
+  left: 668px;
+  top: 0px;
+  font-family: Roboto;
+  font-style: normal;
+  font-weight: bold;
+  font-size: 36px;
+  line-height: 42px;
+  text-align: center;
+  letter-spacing: 0.03em;
+  color: #212121;
+}
+.comand > ul {
+  position: absolute;
+  width: 1170px;
+  height: 422px;
+  left: 215px;
+  top: 50px;
+}
+.john {
+  position: absolute;
+  width: 270px;
+  height: 422px;
+  left: 0px;
+  top: 50px;
+  margin: 0px;
+}
+.john > h3 {
+  position: absolute;
+  width: 87px;
+  height: 19px;
+  left: 92px;
+  top: 290px;
+  font-family: Roboto;
+  font-style: normal;
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 19px;
+  text-align: center;
+  letter-spacing: 0.03em;
+  color: #212121;
+}
+.john > p {
+  margin: 0px;
+  position: absolute;
+  width: 131px;
+  height: 19px;
+  left: 70px;
+  top: 319px;
+  font-family: Roboto;
+  font-style: normal;
+  font-weight: normal;
+  font-size: 16px;
+  line-height: 19px;
+  /* text-align: center; */
+  letter-spacing: 0.03em;
+  color: #757575;
+}
+.john > ul {
+  position: absolute;
+  width: 207px;
+  height: 44px;
+  left: 32px;
+  top: 354px;
+}
+.marta {
+  position: absolute;
+  width: 270px;
+  height: 422px;
+  left: 300px;
+  top: 50px;
+  margin: 0px;
+}
+.marta > h3 {
+  position: absolute;
+  width: 109px;
+  height: 19px;
+  left: 81px;
+  top: 290px;
+  margin: 0px;
+
+  font-family: Roboto;
+  font-style: normal;
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 19px;
+
+  /* text-align: center; */
+  letter-spacing: 0.03em;
+
+  color: #212121;
+}
+.marta > p {
+  margin: 0px;
+  position: absolute;
+  width: 147px;
+  height: 19px;
+  left: 62px;
+  top: 319px;
+  font-family: Roboto;
+  font-style: normal;
+  font-weight: normal;
+  font-size: 16px;
+  line-height: 19px;
+  /* text-align: center; */
+  letter-spacing: 0.03em;
+  color: #757575;
+}
+.marta > ul {
+  position: absolute;
+  width: 207px;
+  height: 44px;
+  left: 32px;
+  top: 354px;
+}
+.robert {
+  position: absolute;
+  width: 270px;
+  height: 422px;
+  left: 600px;
+  top: 50px;
+}
+.robert > h3 {
+  position: absolute;
+  width: 97px;
+  height: 19px;
+  left: 87px;
+  top: 290px;
+  margin: 0px;
+
+  font-family: Roboto;
+  font-style: normal;
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 19px;
+  letter-spacing: 0.03em;
+  color: #212121;
+}
+.robert > p {
+  margin: 0px;
+  position: absolute;
+  width: 76px;
+  height: 19px;
+  left: 97px;
+  top: 319px;
+  font-family: Roboto;
+  font-style: normal;
+  font-weight: normal;
+  font-size: 16px;
+  line-height: 19px;
+  letter-spacing: 0.03em;
+  color: #757575;
+}
+.robert > ul {
+  position: absolute;
+  width: 207px;
+  height: 44px;
+  left: 32px;
+  top: 354px;
+}
+.martin {
+  position: absolute;
+  width: 270px;
+  height: 422px;
+  left: 900px;
+  top: 50px;
+}
+.martin > h3 {
+  position: absolute;
+  width: 84px;
+  height: 19px;
+  left: 93px;
+  top: 290px;
+  margin: 0px;
+  font-family: Roboto;
+  font-style: normal;
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 19px;
+  letter-spacing: 0.03em;
+  color: #212121;
+}
+.martin > p {
+  margin: 0px;
+  position: absolute;
+  width: 87px;
+  height: 19px;
+  left: 92px;
+  top: 319px;
+  font-family: Roboto;
+  font-style: normal;
+  font-weight: normal;
+  font-size: 16px;
+  line-height: 19px;
+  letter-spacing: 0.03em;
+  color: #757575;
+}
+.martin > ul {
+  position: absolute;
+  width: 207px;
+  height: 44px;
+  left: 32px;
+  top: 354px;
+}
