--- a/css/style.css
+++ b/css/style.css
@@ -119,6 +119,7 @@ a {
 }
 .nav-menu-first {
   color: var(--main-color);
+  transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .nav-menu-first:hover,
 .nav-menu-first:focus {
@@ -133,6 +134,7 @@ a {
   color: var(--second-color);
   padding-top: 32px;
   padding-bottom: 32px;
+  transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
   /* outline: 2px solid red; */
 }
 .nav-email {
@@ -204,6 +206,7 @@ main {
   color: #ffffff;
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
   border-radius: 4px;
+  transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .content-button-text:hover,
 .content-button-text:focus {
@@ -284,6 +287,7 @@ main {
   padding: 25px 100px;
   background-color: var(--bgp-features);
   border-radius: 4px;
+  transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .features-link:hover,
 .features-link:focus {
@@ -292,6 +296,7 @@ main {
 
 .features-link {
   background-color: var(--bgp-features);
+  transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .features-link:hover,
 .features-link:focus {
@@ -444,6 +449,7 @@ main {
   box-sizing: border-box;
   border-radius: 4px;
   fill: #afb1b8;
+  transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .clients > li:not(:last-child) {
   margin-right: 30px;
@@ -657,6 +663,7 @@ main {
   text-align: center;
   letter-spacing: 0.03em;
   color: #212121;
+  transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .filter:hover,
 .filter:focus {
@@ -710,23 +717,22 @@ main {
 .images-box {
   position: relative;
   margin-bottom: 20px;
+  overflow: hidden;
 }
 .background-hov-text {
   width: 100%;
   height: 100%;
   position: absolute;
-  top: 0px;
   opacity: 0;
-  transition: 250ms;
+  transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
   background-color: rgba(33, 150, 243, 0.9);
 }
 .blackout:hover .background-hov-text,
 .blackout:focus .background-hov-text {
   opacity: 0.8;
+  transform: translateY(-294px);
 }
-/* .background-hov-text:hover {
-  opacity: inherit;
-} */
+
 .hov-text {
   display: inline-block;
   padding: 63px 24px;
@@ -747,6 +753,7 @@ main {
 
 #address a {
   color: var(--second-color);
+  transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 #address a:hover,
 #address a:focus {
@@ -781,6 +788,7 @@ main {
   width: 44px;
   height: 44px;
   fill: #afb1b8;
+  transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .social a:hover,
 .social a:focus {
@@ -812,6 +820,7 @@ main {
   background-size: 20px;
   background-repeat: no-repeat;
   background-position: center;
+  transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .social-footer > li:not(:last-child) {
   margin-right: 10px;
