--- a/css/style.css
+++ b/css/style.css
@@ -96,7 +96,7 @@ a {
   font-size: 14px;
   line-height: 16px;
   letter-spacing: 0.02em;
-  color: #212121;
+  color: var(--main-color);
 }
 
 .section-nav-contact {
@@ -108,7 +108,10 @@ a {
   font-size: 14px;
   line-height: 16px;
   letter-spacing: 0.02em;
-  color: #757575;
+  color: var(--second-color);
+}
+.nav-menu li {
+  position: relative;
 }
 .section-nav-contact > li:first-child {
   margin-right: 30px;
@@ -120,6 +123,22 @@ a {
 .nav-menu-first {
   color: var(--main-color);
   transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.nav-menu-first::after {
+  position: absolute;
+  bottom: 0px;
+  content: "";
+  display: block;
+  width: 100%;
+  height: 4px;
+  border-radius: 2px;
+  background-color: var(--link);
+  opacity: 0;
+  transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.nav-menu-first:hover::after,
+.nav-menu-first:focus::after {
+  opacity: 1;
 }
 .nav-menu-first:hover,
 .nav-menu-first:focus {
@@ -186,11 +205,7 @@ main {
   /* outline: 2px solid red; */
   max-width: 1600px;
   height: 600px;
-  background-image: linear-gradient(
-      to right,
-      rgba(47, 48, 58, 0.8),
-      rgba(47, 48, 58, 0.8)
-    ),
+  background-image: linear-gradient(to right, var(--bgp), var(--bgp)),
     url(../images/header-img.jpg);
   background-color: var(--second-color);
 }
@@ -206,7 +221,6 @@ main {
   line-height: 30px;
   border: 0px;
   letter-spacing: 0.06em;
-  color: #ffffff;
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
   border-radius: 4px;
   transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
@@ -229,7 +243,6 @@ main {
   line-height: 136%;
   letter-spacing: 0.06em;
   text-transform: uppercase;
-  color: #ffffff;
   padding-top: 200px;
   text-align: center;
   color: var(--white-color);
@@ -259,7 +272,7 @@ main {
   line-height: 1.14;
   letter-spacing: 0.03em;
   text-transform: uppercase;
-  color: #212121;
+  color: var(--main-color);
   margin-bottom: 10px;
 }
 .features p {
@@ -269,7 +282,7 @@ main {
   font-size: 14px;
   line-height: 1.71;
   letter-spacing: 0.03em;
-  color: #757575;
+  color: var(--second-color);
 }
 .section-features {
   /* outline: 2px solid red; */
@@ -282,7 +295,7 @@ main {
   align-items: center;
   width: 270px;
   height: 120px;
-  background-color: #f5f4fa;
+  background-color: var(--bgp-features);
   margin-bottom: 30px;
 }
 
@@ -334,7 +347,7 @@ main {
   font-size: 36px;
   line-height: 1.17;
   letter-spacing: 0.03em;
-  color: #212121;
+  color: var(--main-color);
   margin-bottom: 50px;
 }
 .work {
@@ -362,8 +375,8 @@ main {
   text-align: center;
   letter-spacing: 0.03em;
   text-transform: uppercase;
-  color: #ffffff;
-  background: rgba(47, 48, 58, 0.8);
+  color: var(--white-color);
+  background: var(--bgp);
 }
 
 /*  */
@@ -375,7 +388,7 @@ main {
 /*  */
 .section-team {
   width: 1600px;
-  background-color: #f5f4fa;
+  background-color: var(--bgp-features);
   margin-bottom: 94px;
 }
 .team {
@@ -388,7 +401,7 @@ main {
   margin-right: 30px;
 }
 .team > li {
-  background: #ffffff;
+  background: var(--white-color);
   box-shadow: 0px 2px 1px rgba(0, 0, 0, 0.2), 0px 1px 1px rgba(0, 0, 0, 0.14),
     0px 1px 3px rgba(0, 0, 0, 0.12);
   border-radius: 0px 0px 4px 4px;
@@ -402,7 +415,7 @@ main {
   line-height: 42px;
   text-align: center;
   letter-spacing: 0.03em;
-  color: #212121;
+  color: var(--main-color);
   margin-bottom: 50px;
 }
 .team h3 {
@@ -413,7 +426,7 @@ main {
   line-height: 19px;
   text-align: center;
   letter-spacing: 0.03em;
-  color: #212121;
+  color: var(--main-color);
   margin-bottom: 10px;
 }
 .team p {
@@ -424,7 +437,7 @@ main {
   line-height: 19px;
   text-align: center;
   letter-spacing: 0.03em;
-  color: #757575;
+  color: var(--second-color);
   margin-bottom: 16px;
 }
 .team-john,
@@ -478,7 +491,7 @@ main {
   line-height: 42px;
   text-align: center;
   letter-spacing: 0.03em;
-  color: #212121;
+  color: var(--main-color);
   margin-bottom: 50px;
 }
 
@@ -537,7 +550,7 @@ main {
   font-size: 14px;
   line-height: 24px;
   letter-spacing: 0.03em;
-  color: #ffffff;
+  color: var(--white-color);
 }
 .join-in > h3 {
   padding-top: 73px;
@@ -549,7 +562,7 @@ main {
   line-height: 16px;
   letter-spacing: 0.03em;
   text-transform: uppercase;
-  color: #ffffff;
+  color: var(--white-color);
 }
 .join-in {
   margin-right: 94px;
@@ -563,7 +576,7 @@ main {
   line-height: 16px;
   letter-spacing: 0.03em;
   text-transform: uppercase;
-  color: #ffffff;
+  color: var(--white-color);
 }
 .goit {
   display: block;
@@ -588,7 +601,7 @@ main {
   width: 358px;
   height: 50px;
   padding-left: 16px;
-  background-color: #2f303a;
+  background-color: var(--bgp-footer);
   border: 1px solid rgba(255, 255, 255, 0.3);
   box-sizing: border-box;
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
@@ -626,7 +639,7 @@ main {
   text-align: center;
   letter-spacing: 0.06em;
 
-  color: #ffffff;
+  color: var(--white-color);
 }
 .footer-button > svg {
   margin-left: 10px;
@@ -669,21 +682,31 @@ main {
   border: 0px;
   text-align: center;
   letter-spacing: 0.03em;
-  color: #212121;
+  color: var(--main-color);
+  border-radius: 4px;
   transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .filter:hover,
 .filter:focus {
   color: var(--white-color);
   background-color: var(--link);
+  box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.12), 0px 1px 2px rgba(0, 0, 0, 0.08),
+    0px 3px 1px rgba(0, 0, 0, 0.1);
   cursor: pointer;
 }
 .main-content li {
   width: calc((100% - 30px * 2) / 3);
   margin-right: 30px;
   margin-bottom: 30px;
-  background: #ffffff;
-  /* border: 1px solid #eeeeee; */
+  background: var(--white-color);
+  border: 1px solid #eeeeee;
+  /* box-sizing: border-box;
+  box-shadow: 1px 4px 6px rgba(0, 0, 0, 0.16), 0px 4px 4px rgba(0, 0, 0, 0.06),
+    0px 1px 1px rgba(0, 0, 0, 0.12); */
+}
+.main-content li:hover,
+.main-content li:focus {
+  border: 1px solid #eeeeee;
   box-sizing: border-box;
   box-shadow: 1px 4px 6px rgba(0, 0, 0, 0.16), 0px 4px 4px rgba(0, 0, 0, 0.06),
     0px 1px 1px rgba(0, 0, 0, 0.12);
@@ -709,9 +732,11 @@ main {
   margin-bottom: 4px;
   padding-left: 24px;
   letter-spacing: 0.06em;
-  color: #212121;
+  color: var(--main-color);
 }
-
+.blackout {
+  height: 0px;
+}
 .blackout > p {
   font-family: Roboto;
   font-style: normal;
@@ -720,7 +745,7 @@ main {
   line-height: 30px;
   padding-left: 24px;
   letter-spacing: 0.03em;
-  color: #757575;
+  color: var(--second-color);
 }
 .images-box {
   position: relative;
@@ -738,7 +763,7 @@ main {
 .blackout:hover .background-hov-text,
 .blackout:focus .background-hov-text {
   opacity: 0.8;
-  transform: translateY(-294px);
+  transform: translateY(-297px);
   cursor: pointer;
 }
 
@@ -754,7 +779,7 @@ main {
   /* or 156% */
   letter-spacing: 0.03em;
 
-  color: #ffffff;
+  color: var(--white-color);
 }
 .main-content a > p {
   color: var(--second-color);
