--- a/css/style.css
+++ b/css/style.css
@@ -134,7 +134,7 @@ a {
   border-radius: 2px;
   background-color: var(--link);
   opacity: 0;
-  transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .nav-menu-first:hover::after,
 .nav-menu-first:focus::after {
@@ -700,9 +700,6 @@ main {
   margin-bottom: 30px;
   background: var(--white-color);
   border: 1px solid #eeeeee;
-  /* box-sizing: border-box;
-  box-shadow: 1px 4px 6px rgba(0, 0, 0, 0.16), 0px 4px 4px rgba(0, 0, 0, 0.06),
-    0px 1px 1px rgba(0, 0, 0, 0.12); */
 }
 .main-content li:hover,
 .main-content li:focus {
@@ -734,9 +731,7 @@ main {
   letter-spacing: 0.06em;
   color: var(--main-color);
 }
-.blackout {
-  height: 0px;
-}
+
 .blackout > p {
   font-family: Roboto;
   font-style: normal;
@@ -757,7 +752,8 @@ main {
   height: 100%;
   position: absolute;
   opacity: 0;
-  transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
   background-color: rgba(33, 150, 243, 0.9);
 }
 .blackout:hover .background-hov-text,
