--- a/css/style.css
+++ b/css/style.css
@@ -133,12 +133,14 @@ a {
   height: 4px;
   border-radius: 2px;
   background-color: var(--link);
-  opacity: 0;
-  transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  /* opacity: 0; */
+  transform: scaleX(0);
+  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .nav-menu-first:hover::after,
 .nav-menu-first:focus::after {
-  opacity: 1;
+  /* opacity: 1; */
+  transform: scaleX(1);
 }
 .nav-menu-first:hover,
 .nav-menu-first:focus {
